MODON MRE BPDEV/force-app/main/default/objects/Charge__c/Charge__c.object-meta.xml
<CustomObject>
    <label>Charge</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charge</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>