MODON MRE BPDEV/force-app/main/default/objects/Charge__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Charge</relationshipLabel>
    <relationshipName>Charge</relationshipName>
    <type>Lookup</type>
</CustomField>