MODON MRE BPDEV/force-app/main/default/objects/Charge__c/fields/Mortgage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Amount__c</fullName>
    <label>Mortgage Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>