MODON MRE BPDEV/force-app/main/default/objects/Charge__c/fields/SalesOrderInstallment__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderInstallment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesOrderInstallment</label>
    <referenceTo>SalesOrderInstallments__c</referenceTo>
    <relationshipLabel>Charge</relationshipLabel>
    <relationshipName>Charge</relationshipName>
    <type>Lookup</type>
</CustomField>