MODON MRE BPDEV/force-app/main/default/objects/Charge__c/fields/VAT_Percentage__c.field-meta.xml
<CustomField>
    <fullName>VAT_Percentage__c</fullName>
    <label>VAT Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>