MODON MRE BPDEV/force-app/main/default/objects/Charge__c/recordTypes/ADM_Fee.recordType-meta.xml
<RecordType>
    <fullName>ADM_Fee</fullName>
    <active>true</active>
    <label>ADM &amp; Dari Fee</label>
</RecordType>