MODON MRE BPDEV/force-app/main/default/objects/Charge__c/recordTypes/Admin_Fee_NOC.recordType-meta.xml
<RecordType>
    <fullName>Admin_Fee_NOC</fullName>
    <active>true</active>
    <label>Admin Fee / NOC</label>
</RecordType>