MODON MRE BPDEV/force-app/main/default/objects/Charge__c/recordTypes/Dari_Fee.recordType-meta.xml
<RecordType>
    <fullName>Dari_Fee</fullName>
    <active>true</active>
    <label>Dari Fee</label>
</RecordType>