MODON MRE BPDEV/force-app/main/default/objects/Charge__c/recordTypes/Late_Payment.recordType-meta.xml
<RecordType>
    <fullName>Late_Payment</fullName>
    <active>true</active>
    <label>Late Payment</label>
</RecordType>