MODON MRE BPDEV/force-app/main/default/objects/Charge__c/recordTypes/Management_Fee.recordType-meta.xml
<RecordType>
    <fullName>Management_Fee</fullName>
    <active>true</active>
    <label>Management Fee</label>
</RecordType>