MODON MRE BPDEV/force-app/main/default/objects/Charge__c/recordTypes/Modon_Fee.recordType-meta.xml
<RecordType>
    <fullName>Modon_Fee</fullName>
    <active>true</active>
    <label>Modon Fee</label>
</RecordType>