MODON MRE BPDEV/force-app/main/default/objects/Charge__c/recordTypes/NOC.recordType-meta.xml
<RecordType>
    <fullName>NOC</fullName>
    <active>true</active>
    <label>NOC</label>
</RecordType>