MODON MRE BPDEV/force-app/main/default/objects/Charge__c/recordTypes/Other_Fee.recordType-meta.xml
<RecordType>
    <fullName>Other_Fee</fullName>
    <active>true</active>
    <label>Other Fee</label>
</RecordType>