MODON MRE BPDEV/force-app/main/default/objects/Charge__c/recordTypes/Outstanding_Charge.recordType-meta.xml
<RecordType>
    <fullName>Outstanding_Charge</fullName>
    <active>true</active>
    <label>Outstanding Charge</label>
</RecordType>