MODON MRE BPDEV/force-app/main/default/objects/Charge__c/recordTypes/Penality_Fee.recordType-meta.xml
<RecordType>
    <fullName>Penality_Fee</fullName>
    <active>true</active>
    <label>Penality Fee</label>
</RecordType>